[gd_scene load_steps=6 format=3 uid="uid://bbwis4cvtrlxp"]

[ext_resource type="Script" uid="uid://dkhjdypn3iqga" path="res://addons/dragonforge_sound/sound.gd" id="1_qkf74"]
[ext_resource type="AudioStream" uid="uid://cpeki2se3tx20" path="res://addons/dragonforge_sound/assets/sound/sfx/click/UI2_Button_1.wav" id="2_bmmo0"]
[ext_resource type="AudioStream" uid="uid://cdrf2huw86f18" path="res://addons/dragonforge_sound/assets/sound/sfx/confirm/UI2_Accept_2.wav" id="3_a4m8v"]

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_xiywv"]

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_n2t86"]

[node name="Sound" type="Node"]
script = ExtResource("1_qkf74")
button_pressed_sound = ExtResource("2_bmmo0")
volume_confirm_sound = ExtResource("3_a4m8v")

[node name="DialoguePlayer" type="AudioStreamPlayer" parent="."]
process_mode = 1
bus = &"Dialogue"

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = SubResource("AudioStreamPolyphonic_xiywv")
max_polyphony = 32
bus = &"SFX"

[node name="UISoundPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = SubResource("AudioStreamPolyphonic_n2t86")
max_polyphony = 32
bus = &"UI"
